@@ -146,6 +146,7 @@ Added file encoding option to CPD GUI, which already existed for the command lin
 
 Fixed bug 1932242 - EmptyMethodInAbstractClassShouldBeAbstract false +
 Fixed bug 1928009 - Error using migration ruleset in PMD 4.2
+Fixed bug 1808110 - PreserveStackTrace
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
 bin and java14/bin scripts:
 	retroweaver version was not correct in java14/bin scripts
